feat: implement resource set
